<resources>
    <string name="app_name">Demo</string>

    <string name="bandwagon">搬瓦工</string>
    <string name="subway">地铁图</string>
    <string name="days_matter">倒数日</string>
    <string name="settings">设置</string>

    <string name="in_theaters">正在热映</string>
    <string name="movie_coming_soon">即将上映</string>
    <string name="device_info">设备信息</string>

    <string name="empty">这里空空的</string>
    <string name="error">加载失败</string>
    <string name="no_network">网络异常</string>

    <string name="add_bandwagon">添加主机</string>
    <string name="edit_bandwagon">编辑主机</string>
    <string name="help">帮助</string>
    <string name="title">标题</string>
    <string name="ve_id">VEID</string>
    <string name="api_key">API KEY</string>
    <string name="removed">已删除 %d 项</string>
    <string name="undo">撤销</string>
    <string name="hostname">主机名</string>
    <string name="vm_type">主机类型</string>
    <string name="node_location">所在地</string>
    <string name="os">操作系统</string>
    <string name="ip_address">IP地址</string>
    <string name="ssh_port">SSH端口</string>
    <string name="status">状态</string>
    <string name="cpu_load">CPU负载</string>
    <string name="ram">内存</string>
    <string name="swap">虚拟内存</string>
    <string name="disk_usage">磁盘使用情况</string>
    <string name="bandwidth_usage">流量使用情况</string>
    <string name="resets">重置：%s</string>

    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="reboot">重启</string>
    <string name="kill">杀死</string>
    <string name="more">更多</string>
    <string name="reset_root_password">重置Root密码</string>

    <string name="please_wait">请稍候&#8230;</string>

    <string name="refresh">刷新</string>
    <string name="copy_url">复制链接地址</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="copy_success">复制成功</string>

    <string name="hardware_info">硬件信息</string>
    <string name="model">型号</string>
    <string name="manufacturer">制造商</string>
    <string name="board">主板</string>
    <string name="device">设备</string>
    <string name="product">产品</string>
    <string name="system_info">系统信息</string>
    <string name="android_version">Android 版本</string>
    <string name="code_name">代号</string>
    <string name="api_level">API 级别</string>
    <string name="screen_info">屏幕信息</string>
    <string name="resolution">分辨率</string>
    <string name="resolution_value">%d x %d px</string>
    <string name="available_resolution">可用分辨率</string>
    <string name="density">密度</string>
    <string name="density_value">%d dp</string>
    <string name="exact_density">精确密度</string>
    <string name="exact_density_value">%s x %s dp</string>
    <string name="network_info">网络信息</string>
    <string name="network_type">网络类型</string>
    <string name="disconnected">已断开</string>
    <string name="other">其他</string>
    <string name="ssid">SSID</string>
    <string name="mac_address">MAC地址</string>

    <string name="add">添加</string>
    <string name="days">天</string>
    <string name="someday">某天</string>
    <string name="till">%s还有</string>
    <string name="is_today">%s就是今天</string>
    <string name="already">%s已经</string>

    <string name="default_city">默认城市</string>
    <string name="beijing">北京</string>
    <string name="shanghai">上海</string>
    <string name="guangzhou">广州</string>
    <string name="shenzhen">深圳</string>
    <string name="wuhan">武汉</string>
    <string name="tianjin">天津</string>
    <string name="nanjing">南京</string>
    <string name="hongkong">香港</string>
    <string name="chongqing">重庆</string>
    <string name="hangzhou">杭州</string>
    <string name="shenyang">沈阳</string>
    <string name="dalian">大连</string>
    <string name="chengdu">成都</string>
    <string name="changchun">长春</string>
    <string name="suzhou">苏州</string>
    <string name="foshan">佛山</string>
    <string name="kunming">昆明</string>
    <string name="xian">西安</string>
    <string name="zhengzhou">郑州</string>
    <string name="harbin">哈尔滨</string>
    <string name="changsha">长沙</string>
    <string name="ningbo">宁波</string>
    <string name="wuxi">无锡</string>
    <string name="qingdao">青岛</string>
    <string name="nanchang">南昌</string>
    <string name="fuzhou">福州</string>
    <string name="dongguan">东莞</string>
    <string name="nanning">南宁</string>
    <string name="hefei">合肥</string>
    <string name="shijiazhuang">石家庄</string>
    <string name="guiyang">贵阳</string>
    <string name="xiamen">厦门</string>

    <string name="douban_rating">豆瓣评分</string>
    <string name="no_rating">暂无评分</string>
    <string name="item_directors">导演：%s</string>
    <string name="item_casts">演员：</string>
</resources>