<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_start"
        android:title="@string/start"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_stop"
        android:title="@string/stop"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reboot"
        android:title="@string/reboot"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_kill"
        android:title="@string/kill"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_more"
        android:title="@string/more"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/menu_reset_root_password"
                android:title="@string/reset_root_password"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>