<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TableRow>

            <TextView
                android:text="@string/hardware_info"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/model"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textModel"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/manufacturer"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textManufacturer"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/board"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textBoard"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/device"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textDevice"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/product"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textProduct"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="16dp">

            <TextView
                android:text="@string/system_info"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/android_version"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textAndroidVersion"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/code_name"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textCodeName"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/api_level"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textApiLevel"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="16dp">

            <TextView
                android:text="@string/screen_info"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/resolution"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textResolution"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/available_resolution"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textAvailableResolution"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/density"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textDensity"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/exact_density"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textExactDensity"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginTop="16dp">

            <TextView
                android:text="@string/network_info"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/network_type"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textNetworkType"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowSSID"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/ssid"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textSSID"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowIpAddress"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/ip_address"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textIpAddress"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowMacAddress"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/mac_address"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textMacAddress"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>
</android.support.v4.widget.NestedScrollView>