<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <com.zhuwenhao.demo.custom.MultipleStatusView
        android:id="@+id/multiple_status_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hostname"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_hostname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/vm_type"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_vm_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/node_location"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_node_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/os"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_os"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ip_address"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_ip_addresses"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ssh_port"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_ssh_port"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cpu_load"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_cpu_load"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ram"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp">

                            <TextView
                                android:id="@+id/text_used_ram"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/text_total_ram"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/pb_ram"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/swap"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp">

                            <TextView
                                android:id="@+id/text_used_swap"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/text_total_swap"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/pb_swap"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/disk_usage"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp">

                            <TextView
                                android:id="@+id/text_used_disk"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/text_total_disk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/pb_disk"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bandwidth_usage"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp">

                            <TextView
                                android:id="@+id/text_used_data"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/text_total_data"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/pb_data"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp" />

                        <TextView
                            android:id="@+id/text_resets"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>
    </com.zhuwenhao.demo.custom.MultipleStatusView>
</LinearLayout>